# stl_viewer

./: .gitignore  README.md  build_stl_viewer.spec  main.py  make_exe.py  pyproject.toml
